--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
         <meta name="description" content="hichat | a simple chat application built with node.js and websocket">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>hichat</title>
-        <link rel="stylesheet" href="styles/main.css">
-        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-        <link rel="icon" href="favicon.ico" type="image/x-icon">
+        <link rel="stylesheet" href="main.css">
+        <link rel="shortcut icon" href="favicon.ico" type="x-icon">
+        <link rel="icon" href="favicon.ico" type="x-icon">
     </head>
     <body>
         <div class="wrapper">
@@ -46,7 +46,7 @@
             <small>view on <a href="https://github.com/Wayou/HiChat">GitHub</a> | <a href="mailto:liuwayong@gmail.com">contact me</a></small>
         </footer>
         <script src="/socket.io/socket.io.js"></script>
-        <script src="scripts/hichat.js"></script>
+        <script src="hichat.js"></script>
         <script>
         /**REMOVE ME IF YOU CANT ACCESS GOOGLE SERVICE**/
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
