--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <footer>
             <small>view on <a href="https://github.com/Wayou/HiChat">GitHub</a> | <a href="mailto:liuwayong@gmail.com">contact me</a></small>
         </footer>
-        <script src="/socket.io/socket.io.js"></script>
+        <script src="socket.io.js"></script>
         <script src="hichat.js"></script>
         <script>
         /**REMOVE ME IF YOU CANT ACCESS GOOGLE SERVICE**/
